# simulink-hackrf

./: .gitignore  CMakeLists.txt  README.md  make.m
blockset/: CMakeLists.txt  hackrf_library.slx  slblocks.m
cmake/modules/: FindLIBHACKRF.cmake
demos/: hackrf_mscript_demo.m  hackrf_simple_tx_demo.slx  hackrf_spectrum_scope_demo.slx
src/: CMakeLists.txt  common.c  common.h  hackrf_dev.c  hackrf_dev.m  hackrf_find_devices.c  hackrf_find_devices.m  hackrf_sink.c  hackrf_source.c
